# btr-rust-sandbox

./: .gitignore  README.md
The_Rust_Programming_language/ch1/: main  main.rs
The_Rust_Programming_language/ch1/hello_rust_cargo/: Cargo.toml
The_Rust_Programming_language/ch10/generics_traits_lifetimes/src/: main.rs
The_Rust_Programming_language/ch2/btr_guessing_game/: Cargo.toml
The_Rust_Programming_language/ch2/btr_guessing_game/src/: main.rs
The_Rust_Programming_language/ch3/variables/src/: main.rs
The_Rust_Programming_language/ch4/ownership/src/: main.rs
The_Rust_Programming_language/ch5/structs/src/: main.rs
The_Rust_Programming_language/ch6/enums_and_patterns/src/: main.rs
The_Rust_Programming_language/ch7/packages_crates_modules/out_folder/: I_outside_of_src.rs
The_Rust_Programming_language/ch7/packages_crates_modules/src/: lib.rs  main.rs  side_of_house.rs
The_Rust_Programming_language/ch8/common_collections/src/: main.rs
coding_exercises/: Cargo.toml  ToDo.md
coding_exercises/src/: bin.rs
coding_exercises/src/lib/: constants.rs  lib.rs
coding_exercises/src/lib/challenges/: mod.rs
coding_exercises/src/lib/challenges/mark_allen_java_challenges/: mod.rs
coding_exercises/src/lib/challenges/mark_allen_java_challenges/majc_chapter_one/: chapter_one_challenge_four.rs  chapter_one_challenge_one.rs  chapter_one_challenge_three.rs  chapter_one_challenge_two.rs  mod.rs
coding_exercises/src/lib/challenges/mark_allen_java_challenges/majc_chapter_one/text_assertions_ch_one/: one_one_text_assertion.txt
coding_exercises/tests/lib/: lib.rs
(+5 files in other folders)
