[package]
name = "cargo_challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cargo_challenges_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "cargo_challenges"
path = "src/bin.rs"

[dependencies]
